--- a/park/templates/park/search.html
+++ b/park/templates/park/search.html
@@ -130,13 +130,27 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 </style>
     </head>
     <body>
+        <h1 style="text-align:center">SEARCH</h1>
+        <hr>
         <a href="{% url 'park:index' %}"><button class="button">Home</button></a><br><br>
+
+
         <form action="{% url 'park:search' %}" method="get">
-            <input type="text" name="word" />
-            <input type="submit" name="submit" value="SEARCH!"/>
-        </form><br>
+            <input type="text" name="word" style="width:400px" />
+            <input type="submit" name="submit" value="SEARCH!"/><br/>
+            ค้นจาก : 
+            <label><input type="radio" name="search" value="name"/> ชื่อสัตว์</label>
+            <label><input type="radio" name="search" value="order"/> ลำดับ</label>
+            <label><input type="radio" name="search" value="family"/> วงศ์</label>
+            <label><input type="radio" name="search" value="info"/> ข้อมูลทั่วไป</label>
+            <label><input type="radio" name="search" value="habitat"/> ถิ่นที่อยู่</label>
+            <label><input type="radio" name="search" value="all" checked /> ทั้งหมด</label>
+        </form>
+
+
         {% if word %}
-            ค้นหาด้วยคำว่า : {{ word }}
+            ค้นหาด้วยคำว่า : {{ word }} <br/>
+            (พบรายชื่อสัตว์ {{ lists.count }} รายการ)
         {% if lists %}
 {% for animal in lists %}
     <br/>
