add pending model / user add animal

--- a/park/templates/park/home.html
+++ b/park/templates/park/home.html
@@ -86,6 +86,10 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
         <span style="font-size:16px">({{ fish_num }})</span>
     </p></button></a>
     </div>
-    
+
+    <div class="list_button">
+    <a href="{% url 'park:add_animal' %}"><button class="block-all">
+        <p>Add Animal</p>
+    </button></a>    
 </body>
 </html>
