--- a/park/templates/park/home.html
+++ b/park/templates/park/home.html
@@ -1,59 +1,12 @@
 {% extends 'park/base.html' %}
-
+{% load static %}
 {% block title %}Animal{% endblock %}
 
 {% block style_n_script %}
-<style>
-
-div.list_button {
-    display: inline-block;
-    width: 600px;
-    position: relative;
-    left: 50%;
-    overflow: auto;
-  padding-bottom: 80px;
-    margin: 0px 0px 0px -300px;
-}
-.block-all, .block-left, .block-right{
-    display: flex;
-    height: 120px;
-	margin: 10px;
-	float: left;
-    text-align: center;
-    font-size: 24px;
-    border: none;
-    border-radius: 15px;
-    outline: none;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.3s;
-}
-.block-all:hover, .block-left:hover, .block-right:hover {
-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-.block-left {
-	width: 280px;
-	background: #F4E85C;
-	clear: both;
-}
-.block-right {
-	width: 280px;
-	background: #04BF9D;
-}
-.block-all {
-    height: 50px;
-	width: 580px;
-}
-.block-all p, .block-left p, .block-right p {
-    margin: auto auto;
-    vertical-align: middle;
-}
-
-
-</style>
+    <link rel="stylesheet" href="{% static '/css/home.css' %}">
 {% endblock %}
 
-{% block header %}Animal{% endblock %}
+{% block header %}Animals{% endblock %}
 
 {% block content %}
     <div class="list_button">
