--- a/park/static/css/main.css
+++ b/park/static/css/main.css
@@ -1,50 +1,66 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-.footer
-{
-    background-color:black;
-    position: relative;
-    margin-top: -80px; /* negative value of footer height */
-    width: 100%;
-    left: 0px;
-    right: 0px;
-    height: 80px;
-    clear: both;
+html,
+body {
+	margin:0;
+	padding:0;
+	height:100%;
+    min-width: 660px;
+    background-image: url('../image/pawbg.jpg');
 } 
-.block-all, .block-left, .block-right{
-    display: flex;
-    height: 120px;
-	margin: 10px;
-	float: left;
+
+a:link   {  
+Text-decoration: none;   
+}
+
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+#header {
+    background:  #333333;
+	padding:10px;
+    margin-bottom: 20px;
+}
+#content {
+    
+	padding-bottom:50px; /* Height of the footer element */
+}
+#footer {
+	background:rgba(255,171,98,0.6);
+	width:100%;
+    min-width: 650px;
+	height:50px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+.button-footer {
+
+    background-color: #123456;
+    color: white;
+    border: 2px solid #123456;
+    height: 30px;
+	width: 100px;
+	margin: 10px 5px;
+	float: right;
     text-align: center;
-    font-size: 24px;
+    font-size: 16px;
     border: none;
-    border-radius: 15px;
+    border-radius: 5px;
     outline: none;
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.3s;
 }
-.block-all:hover, .block-left:hover, .block-right:hover {
+.button-footer:hover {
 box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
-.block-left {
-	width: 280px;
-	background: #F4E85C;
-	clear: both;
-}
-.block-right {
-	width: 280px;
-	background: #04BF9D;
-}
-.block-all {
-    height: 50px;
-	width: 580px;
-}
-.block-all p, .block-left p, .block-right p {
+.button-footer p{
     margin: auto auto;
     vertical-align: middle;
+}
+.text-footer {
+    color:#444444;
+    float:left;
+    padding:15px;
+    font-size:16px"
 }
