--- a/park/static/css/list.css
+++ b/park/static/css/list.css
@@ -106,7 +106,7 @@ background-color:rgba(255,255,255,0.8);
     border: none;
     border-radius: 15px;
     outline: none;
-    float: left;
+
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.3s;
@@ -114,6 +114,12 @@ background-color:rgba(255,255,255,0.8);
     height: 180px;
     color: white;
     text-shadow: 1px 1px 0 #444;
+}
+
+@media (min-width:1300px){
+ .block-list{
+     float: left;
+ }   
 }
 .block-list:hover{
 box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
