--- a/park/templates/park/animal_list.html
+++ b/park/templates/park/animal_list.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="{% static '/css/list.css' %}">
 {% endblock %}
 
-{% block header %}Animal List{% endblock %}
+{% block header %}
+<p id="main_page_head">Animal List</p>
+{% endblock %}
 
 {% block content %}
     <div class="list_div">
