--- a/park/templates/park/home.html
+++ b/park/templates/park/home.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="{% static '/css/home.css' %}">
 {% endblock %}
 
-{% block header %}Animals{% endblock %}
+{% block header %}
+<p id="main_page_head">Animals</p>    
+{% endblock %}
 
 {% block content %}
     <div class="list_button">
