--- a/park/templates/park/add_data.html
+++ b/park/templates/park/add_data.html
@@ -1,151 +1,33 @@
-<html>
-    {% load static %}
-    <head>
-        <title>Add Animal</title>
-            <meta charset="UTF-8">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="{% static '/JS/add_picture.js' %}"></script>
-        <style>
-.button {
-    background-color: #4CAF50; /* Green */
-    border: 2px solid #4CAF50;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
-}
+{% extends 'park/base.html' %}
+{% load static %}
 
-.button_All {
-    background-color: white; 
-    color: black; 
-    border: 2px solid #123456;
-}
+{% block title %}Add Animal{% endblock %}
 
-.button_All:hover, .sel_bt_All {
-    background-color: #123456;
-    color: white;
-    border: 2px solid #123456;
-}
+{% block style_n_script %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{% static '/JS/add_picture.js' %}"></script>
+    <link rel="stylesheet" href="{% static '/css/list.css' %}">
+{% endblock %}
 
-.button_Mammal {
-    background-color: white; 
-    color: black; 
-    border: 2px solid #86592d;
-}
+{% block header %}
+<p id="main_page_head">Add Animal Data</p>
+{% endblock %}
 
-.button_Mammal:hover, .sel_bt_Mammal {
-    background-color: #86592d;
-    color: white;
-    border: 2px solid #86592d;
-}
-
-.button_Reptile {
-    background-color: white; 
-    color: black; 
-    border: 2px solid #f44336;
-}
-
-.button_Reptile:hover, .sel_bt_Reptile {
-    background-color: #f44336;
-    color: white;
-    border: 2px solid #f44336;
-}
-
-.button_Bird {
-    background-color: white;
-    color: black;
-    border: 2px solid #04BF9D;
-}
-
-.button_Bird:hover, .sel_bt_Bird {
-    background-color: #04BF9D;
-    color: white;
-    border: 2px solid #04BF9D;}
-
-.button_Fish {
-    background-color: white;
-    color: black;
-    border: 2px solid #008CBA;
-}
-
-.button_Fish:hover, .sel_bt_Fish {
-    background-color: #008CBA;
-    color: white;
-    border: 2px solid #008CBA;
-}
-.button_Amphibian {
-    background-color: white;
-    color: black;
-    border: 2px solid #ff6600;
-}
-
-.button_Amphibian:hover, .sel_bt_Amphibian {
-    background-color: #ff6600;
-    color: white;
-    border: 2px solid #ff6600;
-}
-.block-all, .block-left, .block-right{
-	margin: 10px;
-    padding: 10px 20px 10px 20px;
-	float: left;
-    text-align: left;
-    font-size: 18px;
-    border: none;
-    border-radius: 15px;
-    outline: none;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.3s;
-}
-.block-all {
-	width: 600px;
-	background: #04BF9D;
-    color: white;
-    text-shadow: 1px 1px 0 #444;
-	clear: both;
-}
-.block-all:hover, .block-left:hover, .block-right:hover {
-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-.block-all p, .block-left p, .block-right p {
-    margin: auto auto;
-    vertical-align: middle;
-}
-.block-all table{
-    color: white;
-    text-shadow: 1px 1px 0 #444;
-	
-}
-.animal_name {
-    font-size: 28px;
-}
-.list_Mammal{background-color:#86592d; }
-.list_Reptile{background-color:#f44336; }
-.list_Bird{background-color:#04BF9D; }
-.list_Fish{background-color:#008CBA; }
-.list_Amphibian{background-color:#ff6600; }
-</style>
-    </head>
-    <body>
-        <h1 style="text-align:center">Add Animal</h1>
-        <hr>
-        <a href="{% url 'park:index' %}"><button class="button">Home</button></a><br><br>
-
-        
+{% block content %}
+<div class="list_div">
+        <a href="{% url 'park:index' %}"><button class="button button_menu">&#127968; Home</button></a>
+        <a href="{% url 'park:search' %}"><button class="button button_menu">&#X1F50E; Search</button></a>
+        <a href="{% url 'park:index' %}"><button class="button button_menu">&#X1F4C4; Animal List</button></a>
+</div>
+        <div class="list_div" style="text-align:left;">
         <form action="{% url 'park:add_animal' %}" method="POST" enctype="multipart/form-data">
 
         {% csrf_token %}
-            
+            <h3>กรอกข้อมูลสัตว์ที่ต้องการเพิ่ม</h3>
+            <hr><br>
 
-            ชื่อไทย ( thai name ) : <input type="text" name="thai_name" /><br/>
-            ชื่ออังกฤษ ( name ) : <input type="text" name="name" /><br/>
+            ชื่อไทย ( thai name ) : <input type="text" name="thai_name" /><br/><br/>
+            ชื่ออังกฤษ ( name ) : <input type="text" name="name" /><br/><br/>
             ชั้น ( Class ) : 
             <select name="class_name">
                 <option value="Mammal">Mammal</option>
@@ -153,11 +35,11 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
                 <option value="Bird">Bird</option>
                 <option value="Amphibian">Amphibian</option>
                 <option value="Fish">Fish</option>
-            </select><br/>
-            ลำดับ ( order ) : <input type="text" name="order" /><br/>
-            วงศ์ ( family ) : <input type="text" name="family" /><br/>
-            <div>ข้อมูลทั่วไป ( info ) : <div><textarea name="info" cols="80" rows="10"></textarea></div></div>
-            ถิ่นที่อยู่ ( habitat ) : <div><textarea name="habitat" cols="80" rows="10"></textarea></div></div><br/>
+            </select><br/><br/>
+            ลำดับ ( order ) : <input type="text" name="order" /><br/><br/>
+            วงศ์ ( family ) : <input type="text" name="family" /><br/><br/>
+            <div>ข้อมูลทั่วไป ( info ) : <div><textarea name="info" cols="80" rows="10"></textarea></div></div><br/>
+            ถิ่นที่อยู่ ( habitat ) : <div><textarea name="habitat" cols="80" rows="10"></textarea></div><br/>
             รูป : <br>          
    		<div class="input_fields_wrap">
    	    	<div><input type="file" id="pic_file" name="pic_file" accept=".png , .jpg"></div>
@@ -167,8 +49,5 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 		
         <input type="submit" name="submit" value="Submit!"/>
         </form>
-
-
-       
-    </body>
-</html>
+        </div>
+{% endblock %}
