--- a/park/templates/park/base.html
+++ b/park/templates/park/base.html
@@ -4,20 +4,13 @@
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="{% static '/css/main.css' %}">
-    <style>
-
-@font-face { 
-     font-family: font-head;
-     src: url({% static '/font/KEVER.TTF' %}); 
-}</style>
-    {% block style_n_script %}{% endblock %}
+    {% block style_n_script %}
+    {% endblock %}
 </head>
 <body>
     <div id="wrapper">
     <div id="header">
-    <p style="font-family:font-head;text-align:center;font-size:65px;margin:0px;color:white">
         {% block header %}{% endblock %}
-    </p>
     </div>
     <div id="content">
     {% block content %}
