--- a/park/static/css/list.css
+++ b/park/static/css/list.css
@@ -111,8 +111,8 @@ background-color:rgba(255,255,255,0.8);
     transition-duration: 0.3s;
 	width: 600px;
     height: 180px;
-    color: white;
-    text-shadow: 1px 1px 0 #444;
+    background-color : white;
+    
 }
 
 @media (min-width:1300px){
@@ -129,9 +129,8 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     vertical-align: middle;
 }
 .block-list table{
-    color: white;
+    color: #444444;
     font-size:18px;
-    text-shadow: 1px 1px 0 #444;
 	
 }
 .list-left {
@@ -140,9 +139,11 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 
 .animal_name {
     font-size: 28px;
+    color: #222222;
+    text-shadow: 1px 1px 0 #777777;
 }
-.list_Mammal{background-color:#ac7339; }
-.list_Reptile{background-color:#ff4d4d; }
-.list_Bird{background-color:#04BF9D; }
-.list_Fish{background-color:#008CBA; }
-.list_Amphibian{background-color: #ff8533; }
+.list_Mammal{border: 5px solid #ac7339; }
+.list_Reptile{border: 5px solid #ff4d4d; }
+.list_Bird{border: 5px solid #04BF9D; }
+.list_Fish{border: 5px solid #008CBA; }
+.list_Amphibian{border: 5px solid #ff8533; }
