--- a/park/templates/park/animal_list.html
+++ b/park/templates/park/animal_list.html
@@ -40,11 +40,16 @@
             <button class="block-list list-left list_{{ animal.class_name }}">
             {% endif %}
             <b class="animal_name">{{ animal.thai_name }} ( {{ animal.name }} )</b><br>
+            <div style="float:left">
             <table>
-                <tr><td><b>ชั้น :</b></td><td> &nbsp;{{ animal.class_name }}</td></tr>
+                <tr>
+                    <td><b>ชั้น :</b></td><td> &nbsp;{{ animal.class_name }}</td>
+                    <td rowspan='3'></td>
+                </tr>
                 <tr><td><b>ลำดับ :</b></td><td> &nbsp;{{ animal.order }}</td></tr>
                 <tr><td><b>วงศ์ :</b></td><td> &nbsp;{{ animal.family }}</td></tr>
-            </table>
+            </table></div>
+            <div style="float:right"><img src="{{ animal.image.first.image.url }}" width="200px" height="100px"/></div>
             </button></a>
         {% endfor %}
     {% else %}
