--- a/park/static/css/data.css
+++ b/park/static/css/data.css
@@ -1,17 +1,14 @@
-#container_div{
+.container_div{
     display: table;
     margin: 0 auto;
     min-width: 1300px;
 }
-#footer {
-    min-width: 1300px;
-}
-#container_info{
+.container_info{
     float:left;
     margin: 0px 20px;
 }
 
-#info{
+.info{
     min-width:400px;
     max-width:800px;
     background: rgba(255,255,255,0.8);
@@ -19,14 +16,14 @@
     margin-bottom: 15px;
     border-radius: 15px;
 }
-#data{
+.data{
     float:left;
     background: rgba(255,255,255,0.8);
     border-radius: 15px;
     padding: 20px;
     margin: 0px 0px 20px 20px;
 }
-#menu{
+.menu{
     clear: both;
     margin:20px;
     background: rgba(255,255,255,0.8);
