--- a/park/templates/park/about.html
+++ b/park/templates/park/about.html
@@ -14,7 +14,7 @@
 
 {% block content %}
     <div class="list_div">
-        <a href="{% url 'park:index' %}"><button class="button button_menu">&#127968; Home</button></a><br>
+        <a href="{% url 'park:index' %}"><button id='home' class="button button_menu">&#127968; Home</button></a><br>
     </div>
 
     <div class="about">
