--- a/park/templates/park/no_page.html
+++ b/park/templates/park/no_page.html
@@ -1,7 +1,7 @@
 {% extends 'park/base.html' %}
 {% load static %}
 
-{% block title %}Add Animal{% endblock %}
+{% block title %}Page Not Found{% endblock %}
 
 {% block style_n_script %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block header %}
-<p id="main_page_head">Add Animal Data</p>
+<p id="data_page_head">Page Not Found</p>
 {% endblock %}
 
 {% block content %}
@@ -18,6 +18,6 @@
     <br><h1>ไม่พบหน้าเว็บนี้</h1><br>
         <a href="{% url 'park:index' %}"><button class="button button_menu">&#127968; Home</button></a>
         <a href="{% url 'park:search' %}"><button class="button button_menu">&#X1F50E; Search</button></a>
-        <a href="{% url 'park:index' %}"><button class="button button_menu">&#X1F4C4; Animal List</button></a>
+        <a href="{% url 'park:animal_list' 'All' %}"><button class="button button_menu">&#X1F4C4; Animal List</button></a>
 </div>
 {% endblock %}
