--- a/park/templates/park/add_data.html
+++ b/park/templates/park/add_data.html
@@ -47,7 +47,7 @@
         <p id="add_alert"></p>
 		<button type="button" class="add_field_button">Add More Picture</button><br><br>
 		
-        <input type="submit" name="submit" value="Submit!"/>
+        <input type="submit" name="submit" value="Submit"/>
         </form>
         </div>
 {% endblock %}
