--- a/park/templates/park/home.html
+++ b/park/templates/park/home.html
@@ -12,36 +12,36 @@
 
 {% block content %}
     <div class="list_button">
-    <a href="{% url 'park:search' %}"><button class="block-all">
+    <a href="{% url 'park:search' %}"><button class="block-all" name="search">
         <p>&#X1F50E; search</p>
     </button></a>
 
-    <a href="{% url 'park:animal_list' 'All' %}"><button id="All" class="block-left" >
+    <a href="{% url 'park:animal_list' 'All' %}"><button name="All" class="block-left" >
         <p>สัตว์ทั้งหมด<br>All Animals<br>
         <span style="font-size:16px">({{ all_animal }})</span>
     </p></button></a>
 
-    <a href="{% url 'park:animal_list' 'Mammal' %}"><button id="Mammal" class="block-right">
+    <a href="{% url 'park:animal_list' 'Mammal' %}"><button name="Mammal" class="block-right">
         <p>สัตว์เลี้ยงลูกด้วยนม<br>Mammal<br>
         <span style="font-size:16px">({{ mammal_num }})</span>
     </p></button></a>
 
-    <a href="{% url 'park:animal_list' 'Reptile' %}"><button id="Reptile" class="block-left">
+    <a href="{% url 'park:animal_list' 'Reptile' %}"><button name="Reptile" class="block-left">
         <p>สัตว์เลื้อยคลาน<br>Reptile<br>
         <span style="font-size:16px">({{ reptile_num }})</span>
     </p></button></a>
 
-    <a href="{% url 'park:animal_list' 'Bird' %}"><button id="Bird" class="block-right">
+    <a href="{% url 'park:animal_list' 'Bird' %}"><button name="Bird" class="block-right">
         <p>สัตว์ปีก<br>Bird<br>
         <span style="font-size:16px">({{ bird_num }})</span>
     </p></button></a>
 
-    <a href="{% url 'park:animal_list' 'Amphibian' %}"><button id="Amphibian" class="block-left">
+    <a href="{% url 'park:animal_list' 'Amphibian' %}"><button name="Amphibian" class="block-left">
         <p>สัตว์ครึ่งบกครึ่งน้ำ<br>Amphibian<br>
         <span style="font-size:16px">({{ amphibian_num }})</span>
     </p></button></a>
 
-    <a href="{% url 'park:animal_list' 'Fish' %}"><button id="Fish" class="block-right">
+    <a href="{% url 'park:animal_list' 'Fish' %}"><button name="Fish" class="block-right">
         <p>สัตว์น้ำ<br>Fish<br>
         <span style="font-size:16px">({{ fish_num }})</span>
     </p></button></a>
