--- a/park/templates/park/search.html
+++ b/park/templates/park/search.html
@@ -40,9 +40,9 @@
     {% for animal in lists %}
         <a href="{% url 'park:animal_data' animal.url_name %}">
             {% if forloop.counter|divisibleby:2 %}
-            <button class="block-list list_{{ animal.class_name }}">
+            <button name="{{ animal.name }}" class="block-list list_{{ animal.class_name }}">
             {% else %}
-            <button class="block-list list-left list_{{ animal.class_name }}">
+            <button name="{{ animal.name }}" class="block-list list-left list_{{ animal.class_name }}">
             {% endif %}
             <b class="animal_name">{{ animal.thai_name }} ( {{ animal.name }} )</b><br>
             <table>
