--- a/park/templates/park/base.html
+++ b/park/templates/park/base.html
@@ -19,10 +19,10 @@
     <div id="footer">
         <div class="text-footer">By Thakdanai Khunsaen Cpr.E 13 KMUTNB</div>
         <a href="{% url 'park:about' %}">
-            <button class="button-footer"><p>About</p></button>
+            <button class="button-footer" name="about"><p>About</p></button>
         </a>
         <a href="{% url 'park:add_animal' %}">
-            <button class="button-footer"><p>Add Animal</p></button>
+            <button class="button-footer" name="add_animal"><p>Add Animal</p></button>
         </a>
     </div>
     </div>
